--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <link rel="stylesheet" href="css/aos.css">
   <link rel="stylesheet" href="css/style.css">
 
-  <title>Active Free HTML Template by Untree.co</title>
+  <title>JD's Detailing Services</title>
 </head>
 <body>
 
@@ -48,7 +48,7 @@
       <div class="row align-items-center">
 
         <div class="col-6 col-sm-6 col-lg-3">
-          <h1><a href="index.html">Active<span class="text-primary">.</span> </h1>
+          <h1><a href="index.html"><img src="images/img_h_3.jpg" alt="Image" class="img-fluid rounded"><span class="text-primary">.</span> </h1>
           </div>
 
           <div class="col-6 col-sm-6 col-lg-9 site-navigation text-right">
