--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           </div>
           <div class="col-lg-4 order-lg-1">
             <span class="section-subtitle" data-aos="fade-up" data-aos="">Welcome</span>
-            <h1 class="text-black mb-4" data-aos="fade-up" data-aos="100">Active is a free template by Untree.co, License CC 3.0</h1>
+            <h1 class="text-black mb-4" data-aos="fade-up" data-aos="100">JD's Detailing Service</h1>
             <p data-aos="fade-up" data-aos="200">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
             <p class="mt-5" data-aos="fade-up" data-aos="300"><a href="#" class="btn btn-primary btn-primary-hover-outline">Get Started</a></p>
           </div>
