--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           <div class="col-lg-4 order-lg-1">
             <span class="section-subtitle" data-aos="fade-up" data-aos="">Welcome</span>
             <h1 class="text-black mb-4" data-aos="fade-up" data-aos="100">JD's Detailing Service</h1>
-            <p data-aos="fade-up" data-aos="200">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+            <p data-aos="fade-up" data-aos="200">JD's Detailing Service comes to you, work at your home, skilled and professional, using high-quality materials and tools to perform the work. Services range from maintenance washes to full paint correction of exterior paint, offering ceramic coating as well. Interior services include vacuuming, cleaning, and protecting. Need to be set up for significant stain removal of interior area. Highly skilled and specialized in appearance condition, only polishing surfaces are required to restore the paint. Multiple protection offerings are available, from wax/sealants to complete ceramic coating. Very flexible price offerings; please send in preliminary photos and a detailed description of the vehicle's condition for an accurate quote on the rate and time to complete. Owner operated.</p>
             <p class="mt-5" data-aos="fade-up" data-aos="300"><a href="#" class="btn btn-primary btn-primary-hover-outline">Get Started</a></p>
           </div>
 
