--- a/index.html
+++ b/index.html
@@ -501,29 +501,29 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-7 text-center">
-            <span class="section-subtitle">Plans</span>
-            <h2 class="section-title">Pricing Table</h2>
+            <span class="section-subtitle">Wash Plans</span>
+            <h2 class="section-title">Personal Vechile Care</h2>
           </div>
         </div>
         <div class="row">
           <div class="col-6 col-sm-6 col-md-6 col-lg-4 mb-4 mb-lg-0">
             <div class="pricing-table text-center">
-              <h3 class="text-black">Free</h3>
+              <h3 class="text-black">BRONZE</h3>
 
               <div class="price-wrap text-black">
                 <sup class="currency">$</sup>
-                <span class="price">0</span>
-                <span class="per">/month</span>
+                <span class="price">80</span>
+                <span class="per">/Starting at</span>
               </div>
               
               <ul class="list-unstyled">
-                <li>Far far away behind</li>
-                <li>The word mountains far from</li>
-                <li class="exclude">The countries Vokalia</li>
-                <li class="exclude">and Consonantia, there</li>
-                <li class="exclude">At the coast</li>
-                <li class="exclude">
-                  Semantics, a large language
+                <li>Hand Wash w/ Spot Free Soap & Water.</li>
+                <li>Basic Interior Cleaning</li>
+                <li>Wheel and Tire Shine</li>
+                <li>Clean Doors, Jams, Cracks, and Crevices</li>
+                <li>Car Fragrance</li>
+                <li>Final Touch Wax</li>
+                 
                 </li>
               </ul>
 
