--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 
 
 
-    <div class="news-section bg-white">
+    <div class="news-section bg-black">
 
       <div class="title-wrap">
         <div class="container">
