--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
               <ul class="list-unstyled">
                 <li>Hand Wash w/ Spot Free Soap & Water</li>
                 <li>Basic Interior Cleaning</li>
-                <li>Deep Wheel Wash & Tire Shine</li>
+                <li>Wheel Wash & Tire Shine</li>
                 <li>Clean Doors, Jams, Cracks, and Crevices</li>
                 <li>Car Fragrance</li>
                 <li>Final Touch Wax</li>
@@ -534,7 +534,7 @@
           </div>
           <div class="col-6 col-sm-6 col-md-6 col-lg-4 mb-4 mb-lg-0">
             <div class="pricing-table text-center">
-              <h3 class="text-black">Silver</h3>
+              <h3 class="text-Blue">Silver</h3>
 
               <div class="price-wrap text-primary">
                 <sup class="currency">$</sup>
@@ -549,8 +549,11 @@
                 <li>Leather Conditioner</li>
                 <li>Hand Wash w/ Spot Free Soap & Water</li>
                 <li>Basic Interior Cleaning</li>
+                <li>Wheel Wash & Tire Shine</li>
+                <li>Clean Doors, Jams, Cracks, and Crevices</li>
+                <li>Car Fragrance</li>
+                <li>Final Touch Wax</li>
                 
-                  Semantics, a large language
                 </li>
               </ul>
 
