--- a/index.html
+++ b/index.html
@@ -564,21 +564,32 @@
             <div class="pricing-table text-center">
               <h3 class="text-black">Developer</h3>
 
-              <div class="price-wrap text-black">
+              <div class="price-wrap text-Gold">
                 <sup class="currency">$</sup>
-                <span class="price">799</span>
-                <span class="per">/month</span>
+                <span class="price">280</span>
+                <span class="per">/Starting at</span>
               </div>
               
               <ul class="list-unstyled">
-                <li>Far far away behind</li>
-                <li>The word mountains far from</li>
-                <li>The countries Vokalia</li>
-                <li>and Consonantia, there</li>
-                <li class="exclude">At the coast</li>
-                <li class="exclude">
-                  Semantics, a large language
-                </li>
+                <li>Deep Steam Cleaning</li>
+                <li>Deep Carpet Extractor</li>
+                <li>Compressed Air Dry</li>
+                <li>Cutting Compound to Remove Light/Medium Scratches</li>
+                <li>Paint Bright Up</li>
+                <li>Deep Wash on Floor Mats</li>
+                <li>Deep Scrub on Carpet/Cup Holder</li>
+                <li>Deep Conditionar Scrub on all Plastics, Vinals, Leather, and Headliner</li>
+                <li>Clay Bar</li>
+                <li>One-Step Polish</li>
+                <li>Engine Bay Detail</li>
+                <li>Leather Conditioner</li>
+                <li>Hand Wash w/ Spot Free Soap & Water</li>
+                <li>Basic Interior Cleaning</li>
+                <li>Wheel Wash & Tire Shine</li>
+                <li>Clean Doors, Jams, Cracks, and Crevices</li>
+                <li>Car Fragrance</li>
+                <li>Final Touch Wax</li>
+                
               </ul>
 
               <p class="mt-5"><a href="#" class="btn btn-outline-primary">Get Started</a></p>
