--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
           </div>
           <div class="col-6 col-sm-6 col-md-6 col-lg-4 mb-4 mb-lg-0">
             <div class="pricing-table text-center">
-              <h3 class="text-Blue">Silver</h3>
+              <h3 class="text-black">Silver</h3>
 
               <div class="price-wrap text-primary">
                 <sup class="currency">$</sup>
