--- a/index.html
+++ b/index.html
@@ -508,9 +508,9 @@
         <div class="row">
           <div class="col-6 col-sm-6 col-md-6 col-lg-4 mb-4 mb-lg-0">
             <div class="pricing-table text-center">
-              <h3 class="text-black">Bronze</h3>
+              <h3 class="text-Bronze">Bronze</h3>
 
-              <div class="price-wrap text-black">
+              <div class="price-wrap text-bronze">
                 <sup class="currency">$</sup>
                 <span class="price">80</span>
                 <span class="per">/Starting at</span>
@@ -534,9 +534,9 @@
           </div>
           <div class="col-6 col-sm-6 col-md-6 col-lg-4 mb-4 mb-lg-0">
             <div class="pricing-table text-center">
-              <h3 class="text-black">Silver</h3>
+              <h3 class="text-silver">Silver</h3>
 
-              <div class="price-wrap text-primary">
+              <div class="price-wrap text-silver">
                 <sup class="currency">$</sup>
                 <span class="price">180</span>
                 <span class="per">/Starting at</span>
@@ -562,9 +562,9 @@
           </div>
           <div class="col-6 col-sm-6 col-md-6 col-lg-4 mb-4 mb-lg-0">
             <div class="pricing-table text-center">
-              <h3 class="text-black">Developer</h3>
+              <h3 class="text-gold">Gold</h3>
 
-              <div class="price-wrap text-Gold">
+              <div class="price-wrap text-gold">
                 <sup class="currency">$</sup>
                 <span class="price">280</span>
                 <span class="per">/Starting at</span>
@@ -574,8 +574,7 @@
                 <li>Deep Steam Cleaning</li>
                 <li>Deep Carpet Extractor</li>
                 <li>Compressed Air Dry</li>
-                <li>Cutting Compound to Remove Light/Medium Scratches</li>
-                <li>Paint Bright Up</li>
+                <li>Cutting Compound to Remove Light/Medium Scratches & Brighten Up Paint</li>
                 <li>Deep Wash on Floor Mats</li>
                 <li>Deep Scrub on Carpet/Cup Holder</li>
                 <li>Deep Conditionar Scrub on all Plastics, Vinals, Leather, and Headliner</li>
