--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-7 text-center">
-            <span class="section-subtitle">Wash Plans</span>
+            <span class="section-subtitle">Mobile Detail</span>
             <h2 class="section-title">Personal Vechile Care</h2>
           </div>
         </div>
