--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
                 <li>Cutting Compound to Remove Light/Medium Scratches & Brighten Up Paint</li>
                 <li>Deep Wash on Floor Mats</li>
                 <li>Deep Scrub on Carpet/Cup Holder</li>
-                <li>Deep Conditionar Scrub on all Plastics, Vinals, Leather, and Headliner</li>
+                <li>Deep Scrub on all Plastics, Vinals, Leather, and Headliner</li>
                 
               </ul>
 
