--- a/index.html
+++ b/index.html
@@ -434,9 +434,9 @@
 
           <div class="col-md-6 col-lg-4 offset-lg-2">
             <span class="section-subtitle">Our Services</span>
-            <h2 class="section-title">Far far away, behind the word mountains, far from the countries Vokalia</h2>
-            <p class="lead">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-            <p class="mb-5">Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+            <h2 class="section-title">THE BEST CAR DETAILING ORANGE COUNTY </h2>
+            <p class="lead">What sets us apart is that we offer truly unique and professional car detailing services. We know that different people will need a varied level of service. And so, we are versatile enough to care for each unique need. We offer more than spray and mop cleaning services. Our services include interior and exterior cleaning, tire dressing, bug removal, full upholstery, vent cleaning, and air sanitation. </p>
+            <p class="mb-5">The other add-on services you can count on us to deliver include Headlight Restoration, Ceramic Glass Sealant, Wheel, and Rim Restoration, Extensive Interior Care, and Hard Water Spot Removal.</p>
             <p><a href="#" class="btn btn-primary btn-primary-hover-outline">Contact Us</a></p>
 
           </div>
