--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- /*
-* Template Name: Active
-* Template Author: Untree.co
+* Website Name : JD's Detailing Services
+* Template Author: EncinasPro
 * Tempalte URI: https://untree.co/
 * License: https://creativecommons.org/licenses/by/3.0/
 */ -->
