--- a/index.html
+++ b/index.html
@@ -449,8 +449,8 @@
                     <span class="flaticon-job-search"></span>
                   </div>
                   <div>
-                    <h3>Square</h3>
-                    <p>Separated they live in Bookmarksgrove right at the coast</p>
+                    <h3>Interior Car Cleaning</h3>
+                    <p>Our interior car cleaning solutions include vacuuming, scrubbing and brushing, steam cleaning, glass cleaning, perfuming, and leather trimming. Aside from that, our complete interior service includes but is not limited to the following. The pricing starts at $$$</p>
                   </div>
                 </div>
               </div>
@@ -460,8 +460,8 @@
                     <span class="flaticon-statistics"></span>
                   </div>
                   <div>
-                    <h3>Technology</h3>
-                    <p>Separated they live in Bookmarksgrove right at the coast</p>
+                    <h3>Headlight Restoration Services</h3>
+                    <p>We provide a service that restores these light fixtures and brightens them to look brand new. This is a great way to update the look of your car and save much money!</p>
                   </div>
                 </div>
               </div>
@@ -471,8 +471,8 @@
                     <span class="flaticon-rocket"></span>
                   </div>
                   <div>
-                    <h3>Brilliant Ideas</h3>
-                    <p>Separated they live in Bookmarksgrove right at the coast</p>
+                    <h3>Wheel Repair</h3>
+                    <p>We specialize in wheel repair—curb rash gouges and scratches on various finishes. We repair hundreds of wheels every month, all makes and models, so you know you are in good hands with technicians that are experienced, skilled, and knowledgeable about your brand of wheel.</p>
                   </div>
                 </div>
               </div>
@@ -483,8 +483,8 @@
                     <span class="flaticon-growth"></span>
                   </div>
                   <div>
-                    <h3>Blueprint</h3>
-                    <p>Separated they live in Bookmarksgrove right at the coast</p>
+                    <h3>Ceramic Coating Packages</h3>
+                    <p>The ceramic coating increases your car’s market value. Preserving your vehicle with a ceramic coat increases its market resale value. This is due to the car’s long-lasting and fantastic shine and the coating’s capacity to maintain its original factory paint.</p>
                   </div>
                 </div>
               </div>
