--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="author" content="Untree.co">
+  <meta name="author" content="JD's Detailing">
   <link rel="shortcut icon" href="Logo(1).JPEG">
 
   <meta name="description" content="" />
