--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
 
 
             <div class="owl-single dots-absolute owl-carousel">
-              <img src="images/img_h_6.jpg" alt="Image" class="img-fluid">
-              <img src="images/img_h_7.jpg" alt="Image" class="img-fluid">
-              <img src="images/img_h_8.jpg" alt="Image" class="img-fluid">
+              <img src="images/Into1.jpg" alt="Image" class="img-fluid">
+              <img src="images/Into2.jpg" alt="Image" class="img-fluid">
+              <img src="images/Into3.jpg" alt="Image" class="img-fluid">
               
             </div>
 
