--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
               <img src="images/Into3.jpg" alt="Image" class="img-fluid">
               <img src="images/Into6.jpg" alt="Image" class="img-fluid">
               <img src="images/Into4.jpg" alt="Image" class="img-fluid">
+              <img src="images/Into7.jpg" alt="Image" class="img-fluid">
               <img src="images/Into5.jpg" alt="Image" class="img-fluid">
               
             </div>
