--- a/index.html
+++ b/index.html
@@ -435,10 +435,10 @@
         <div class="row justify-content-between">
 
           <div class="col-md-6 col-lg-4 offset-lg-2">
-            <span class="section-subtitle">Our Services</span>
-            <h2 class="section-title">THE BEST CAR DETAILING ORANGE COUNTY </h2>
+            <span class="section-subtitle">Additonal Services</span>
+            <h2 class="section-title">Our custom deals tailored to YOU</h2>
             <p class="lead">What sets us apart is that we offer truly unique and professional car detailing services. We know that different people will need a varied level of service. And so, we are versatile enough to care for each unique need. We offer more than spray and mop cleaning services. Our services include interior and exterior cleaning, tire dressing, bug removal, full upholstery, vent cleaning, and air sanitation. </p>
-            <p class="mb-5">The other add-on services you can count on us to deliver include Headlight Restoration, Ceramic Glass Sealant, Wheel, and Rim Restoration, Extensive Interior Care, and Hard Water Spot Removal.</p>
+            <p class="mb-5">The other add-on services you can count on us to deliver include Headlight Restoration, Ceramic Coating, Wheel Repair, Extensive Interior Care, and Hard Water Spot Removal.</p>
             <p><a href="#" class="btn btn-primary btn-primary-hover-outline">Contact Us</a></p>
 
           </div>
