--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
                   </div>
                   <div>
                     <h3>Wheel Repair</h3>
-                    <p>We specialize in wheel repair—curb rash gouges and scratches on various finishes. We repair hundreds of wheels every month, all makes and models, so you know you are in good hands with technicians that are experienced, skilled, and knowledgeable about your brand of wheel.</p>
+                    <p>We specialize in wheel repair—curb rash gouges and scratches on various finishes. We repair hundreds of wheels every month, all makes and models, so you know you are in good hands with JD's Detailing Services which are experienced, skilled, and knowledgeable about your brand of wheel.</p>
                   </div>
                 </div>
               </div>
