--- a/index.html
+++ b/index.html
@@ -237,8 +237,8 @@
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-lg-7 text-center">
-              <span class="section-subtitle">Recent Posts</span>
-              <h2 class="section-title">Blog Posts</h2>
+              <span class="section-subtitle">Ceramic Coating</span>
+              <h2 class="section-title">Packages</h2>
             </div>
           </div>
 
