--- a/index.html
+++ b/index.html
@@ -253,7 +253,9 @@
                     <a href="#" class="cat">BRONZE</a> &bullet; <span class="date">6 - 12 Months Coating</span>
                   </div>
                   <h3><a href="#">There live the blind texts they live</a></h3>
-                  <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                  <p>The Bronze Package consists of 1 layer of Ceramic Pro Light applied over the vehicle’s paint. This coating protects against light scratching and provides a beautiful glossy finish with a 2 year warranty. An additional protective layer is added to other areas including windshield and wheels.</p>
+                  <p>INCLUDES</p>
+
 
                   <div class="d-flex author align-items-center">
                     <div class="pic">
