--- a/index.html
+++ b/index.html
@@ -252,10 +252,9 @@
                   <div class="meta">
                     <a href="#" class="cat">BRONZE</a> &bullet; <span class="date">6 - 12 Months Coating</span>
                   </div>
-                  <h3><a href="#">There live the blind texts they live</a></h3>
+                  <h3><a href="#">BRONZE PACKAGE</a></h3>
                   <p>The Bronze Package consists of 1 layer of Ceramic Pro Light applied over the vehicle’s paint. This coating protects against light scratching and provides a beautiful glossy finish with a 2 year warranty. An additional protective layer is added to other areas including windshield and wheels.</p>
-                  <p>INCLUDES</p>
-
+                                   <p>INCLUDES</p>
 
                   <div class="d-flex author align-items-center">
                     <div class="pic">
