--- a/index.html
+++ b/index.html
@@ -254,15 +254,19 @@
                   </div>
                   <h3><a href="#">BRONZE PACKAGE</a></h3>
                   <p>The Bronze Package consists of 1 layer of Ceramic Pro Light applied over the vehicle’s paint. This coating protects against light scratching and provides a beautiful glossy finish with a 2 year warranty. An additional protective layer is added to other areas including windshield and wheels.</p>
-                                   <p>INCLUDES</p>
+                  <p>INCLUDES</p>
 
                   <div class="d-flex author align-items-center">
                     <div class="pic">
                       <img src="images/person_2.jpg" alt="Image" class="img-fluid rounded-circle">
                     </div>
                     <div class="author-name">
-                      <strong class="d-block">Winston Gold</strong>
-                      <span class="">Lead Product Designer</span>
+                      <strong class="d-block">INCLUDES</strong>
+                      <span class="">A thorough wash and decontamination</span>
+                      <span class="">Then after is clayed with an automotive clay bar</span>
+                      <span class="">1 layer of “Light” on paintwork & trim</span>
+                      <span class="">1 layer of “Light” on exterior plastic</span>
+                      <span class="">1 layer of “Light” on face of wheels</span>
                     </div>
 
                   </div>
