--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 
                   <div class="d-flex author align-items-center">
                     <div class="pic">
-                      <img src="images/person_2.jpg" alt="Image" class="img-fluid rounded-circle">
+                      <img src="images/Bronze.jpg" alt="Image" class="img-fluid rounded-circle">
                     </div>
                     <div class="author-name">
                       <strong class="d-block">INCLUDES</strong>
@@ -266,6 +266,7 @@
                       <span class="">1 layer of “Light” on paintwork & trim</span>
                       <span class="">1 layer of “Light” on exterior plastic</span>
                       <span class="">1 layer of “Light” on face of wheels</span>
+                      <span class="">1 layer of “Rain” on windshield and all around windows</span>
                     </div>
 
                   </div>
