--- a/index.html
+++ b/index.html
@@ -320,16 +320,21 @@
                   <div class="meta">
                     <a href="#" class="cat">GOLD</a> &bullet; <span class="date">7 - 10 Years Coating</span>
                   </div>
-                  <h3><a href="#">There live the blind texts they live</a></h3>
-                  <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                  <h3><a href="#">GOLD PACKAGE</a></h3>
+                  <p>The Gold Package consists of 4 layers of Ceramic Pro 9H applied to the vehicle’s paint, providing permanent protection with a lifetime warranty. An additional layer of protection is added to exposed areas including windshield and wheels.</p>
 
                   <div class="d-flex author align-items-center">
                     <div class="pic">
-                      <img src="images/person_2.jpg" alt="Image" class="img-fluid rounded-circle">
+                      <img src="images/Gold.jpg" alt="Image" class="img-fluid rounded-circle">
                     </div>
                     <div class="author-name">
-                      <strong class="d-block">Winston Gold</strong>
-                      <span class="">Lead Product Designer</span>
+                      <strong class="d-block">INCLUDES</strong>
+                      <span class="">A thorough wash and decontamination</span>
+                      <span class="">L</span>
+                      <span class="">L</span>
+                      <span class="">L</span>
+                      <span class="">L</span>
+                      <span class="">L</span>
                     </div>
 
                   </div>
