--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                     </div>
                     <div class="author-name">
                       <strong class="d-block">INCLUDES</strong>
-                      <span class="">A thorough wash and decontamination</span>
+                      <span class="">A thorough wash and decontamination*</span>
                       <span class="">Then after is clayed with an automotive clay bar</span>
                       <span class="">1 layer of “Light” on paintwork & trim</span>
                       <span class="">1 layer of “Light” on exterior plastic</span>
@@ -295,12 +295,12 @@
                     </div>
                     <div class="author-name">
                       <strong class="d-block">INCLUDES</strong>
-                      <span class=""> - A thorough wash and decontamination - </span>
-                      <span class=""> - Then after is clayed with an automotive clay bar - </span>
-                      <span class=""> - 2 layers of 9H as paint protection - </span>
-                      <span class=""> - 1 layer of 9H on exterior plastic - </span>
-                      <span class=""> - 1 layer of 9H on face of wheels - </span>
-                      <span class=""> - 1 layer of “Rain” on windshield and all around windows - </span>
+                      <span class="">A thorough wash and decontamination*</span>
+                      <span class="">Then after is clayed with an automotive clay bar</span>
+                      <span class="">2 layers of 9H as paint protection</span>
+                      <span class="">1 layer of 9H on exterior plastic</span>
+                      <span class="">1 layer of 9H on face of wheels</span>
+                      <span class="">1 layer of “Rain” on windshield and all around windows</span>
                     </div>
 
                   </div>
