--- a/index.html
+++ b/index.html
@@ -329,12 +329,13 @@
                     </div>
                     <div class="author-name">
                       <strong class="d-block">INCLUDES</strong>
-                      <span class="">A thorough wash and decontamination</span>
-                      <span class="">L</span>
-                      <span class="">L</span>
-                      <span class="">L</span>
-                      <span class="">L</span>
-                      <span class="">L</span>
+                      <span class="">A thorough wash and decontamination*</span>
+                      <span class="">Then after is clayed with an automotive clay bar</span>
+                      <span class="">4 layers of 9H as paint protection</span>
+                      <span class="">1 layer of “Light” as a top coat</span>
+                      <span class="">1 layer of 9H on exterior plastic</span>
+                      <span class="">1 layer of 9H on face of wheels</span>
+                      <span class="">1 layer of “Rain” on windshield and all around the windows</span>
                     </div>
 
                   </div>
