--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <div class="col-sm-12 col-md-5 col-lg-4 col-xl-4 order-lg-2 offset-xl-1 mb-4">
               <div class="img-wrap text-center text-md-left" data-aos="fade-up">
                 <div class="img">
-                  <img src="images/img_v_3.jpg" alt="Statue" class="img-fluid">
+                  <img src="images/StickF.jpg" alt="Statue" class="img-fluid">
                 </div>
               </div>
             </div>
@@ -140,8 +140,8 @@
               <div class="px-3">
 
 
-                <span class="section-subtitle">Our Mission</span>
-                <h2 class="section-title">The Big Oxmox advised her not to do so, because there were thousands.</h2>
+                <span class="section-subtitle">About Us</span>
+                <h2 class="section-title">A mission to be the best detailing compnay in Southern California</h2>
                 <p class="lead">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country.</p>
                 <p class="mb-5">The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli.</p>
                 <p><a href="#" class="btn btn-primary btn-primary-hover-outline">Get Started</a></p>
