--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
               <div class="px-3">
 
 
-                <span class="section-subtitle">About Us</span>
-                <h2 class="section-title">A mission to be the best detailing compnay in Southern California</h2>
+                <span class="section-subtitle">Juan D Monreal - Founder</span>
+                <h2 class="section-title">A mission to be the best detailing company in Southern California</h2>
                 <p class="lead">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country.</p>
                 <p class="mb-5">The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli.</p>
                 <p><a href="#" class="btn btn-primary btn-primary-hover-outline">Get Started</a></p>
