--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@
               <div class="px-3">
 
 
-                <span class="section-subtitle">Juan D Monreal - Founder</span>
+                <span class="section-subtitle">Juan D Monreal  -  Founder</span>
                 <h2 class="section-title">A mission to be the best detailing company in Southern California</h2>
-                <p class="lead">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country.</p>
-                <p class="mb-5">The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli.</p>
+                <p class="lead">When you want your car cleaned, polished, and protected, turn to a team you can trust. Our qualified and certified professionals are passionate about what we do, and we promise expert service with a smile. With years in the detailing industry, our expertise allows us to offer our clients comprehensive, first-rate auto detailing and hand-washing services.</p>
+                <p class="mb-5">We dont know what to write here yet</p>
                 <p><a href="#" class="btn btn-primary btn-primary-hover-outline">Get Started</a></p>
               </div>
 
