--- a/index.html
+++ b/index.html
@@ -790,7 +790,7 @@
 
         <div class="row copyright">
           <div class="col-lg-9 ">
-            <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script>. All Rights Reserved. &mdash; Designed with love by <a href="https://untree.co">Untree.co</a> <!-- License information: https://untree.co/license/ -->
+            <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script>. All Rights Reserved. &mdash; Designed by <a href="https://untree.co">EncinasPro</a>
             </p>
           </div>
           
