--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
 
 
             <div class="owl-single dots-absolute owl-carousel">
+              <img src="images/Into8.jpg" alt="Image" class="img-fluid">
               <img src="images/Into3.jpg" alt="Image" class="img-fluid">
               <img src="images/Into6.jpg" alt="Image" class="img-fluid">
               <img src="images/Into4.jpg" alt="Image" class="img-fluid">
