--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             </div>
             <div class="col-md-5 col-lg-5 offset-md-1">
               <div class="images-overlap">
-                <img src="images/img_v_1.jpg" alt="student" class="img-fluid img-1" data-aos="fade-up">
+                <img src="images/UV.jpg" alt="student" class="img-fluid img-1" data-aos="fade-up">
                 
               </div>
             </div>
