--- a/index.html
+++ b/index.html
@@ -199,9 +199,9 @@
 
             <div class="col-md-4 col-lg-4 offset-md-1 order-md-2">
               <span class="section-subtitle">Why Us</span>
-              <h2 class="section-title">Far far away Behind the Word Mountains</h2>
-              <p class="lead">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
-              <p class="mb-5">There live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+              <h2 class="section-title">Why is your mobile auto detailing better than me going to a car wash?</h2>
+              <p class="lead">Mobile auto detailing is convenient for you because we travel to a location of our choice. Instead of going out of your way to search for a car wash, inquire about our mobile auto detailing services today.</p>
+              <p class="mb-5">Just give us a call today so we can get started as soon as possible! We look forward to working with you.</p>
               <div class="row mb-5 count-numbers">
                 <div class="col-4 counter" data-aos="fade-up" data-aos-delay="100">
                   <span class="number" data-number="3919"></span>
