--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 
             <div class="col-md-4 col-lg-4 offset-md-1 order-md-2">
               <span class="section-subtitle">Why Us</span>
-              <h2 class="section-title">Why is your mobile auto detailing better than me going to a car wash?</h2>
+              <h2 class="section-title">Why is mobile auto detailing better than going to your local car wash?</h2>
               <p class="lead">Mobile auto detailing is convenient for you because we travel to a location of our choice. Instead of going out of your way to search for a car wash, inquire about our mobile auto detailing services today.</p>
               <p class="mb-5">Just give us a call today so we can get started as soon as possible! We look forward to working with you.</p>
               <div class="row mb-5 count-numbers">
