--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="JD's Detailing">
-  <link rel="shortcut icon" href="Updatedlogo(1).png">
+  <link rel="shortcut icon" href="main01.png">
 
   <meta name="description" content="" />
   <meta name="keywords" content="" />
