--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!-- /*
 * Website Name : JD's Detailing Services
 * Template Author: EncinasPro
-* Tempalte URI: https://untree.co/
+* Tempalte URI: https://jddetailingservices.com/
 * License: https://creativecommons.org/licenses/by/3.0/
 */ -->
 <!doctype html>
