--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="row align-items-center">
 
         <div class="col-6 col-sm-6 col-lg-3">
-          <h1><a href="index.html"><img src="images/Updatedlogo(1).png" alt="Image" class="img-fluid rounded"><span class="text-primary">.</span> </h1>
+          <h1><a href="index.html"><img src="images/main01.jpg" alt="Image" class="img-fluid rounded"><span class="text-primary">.</span> </h1>
           </div>
 
           <div class="col-6 col-sm-6 col-lg-9 site-navigation text-right">
