--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <div class="col-sm-12 col-md-5 col-lg-4 col-xl-4 order-lg-2 offset-xl-1 mb-4">
               <div class="img-wrap text-center text-md-left" data-aos="fade-up">
                 <div class="img">
-                  <img src="images/StickF.jpg" alt="Statue" class="img-fluid">
+                  <img src="images/fam01.jpg" alt="Statue" class="img-fluid">
                 </div>
               </div>
             </div>
