--- a/index.html
+++ b/index.html
@@ -627,12 +627,12 @@
             <div class="custom-accordion" id="accordion_1">
               <div class="accordion-item">
                 <h2 class="mb-0">
-                  <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">How to download and register?</button>
+                  <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">How long does a full car detail take?</button>
                 </h2>
 
                 <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion_1">
                   <div class="accordion-body">
-                    Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
+                    Depending on the service, a full vechile detail takes on average 2-4 hours.
                   </div>
                 </div>
               </div> <!-- .accordion-item -->
