--- a/index.html
+++ b/index.html
@@ -639,11 +639,11 @@
 
               <div class="accordion-item">
                 <h2 class="mb-0">
-                  <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">How to create your paypal account?</button>
+                  <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">How often should I detail my car? ?</button>
                 </h2>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion_1">
                   <div class="accordion-body">
-                    A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.
+                    Car wash and detailing experts recommend detailing your car twice a year. However, the duration can change based on your car’s condition as well. The more often you detail your car, the better you can maintain it.
                   </div>
                 </div>
               </div> <!-- .accordion-item -->
