--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
 
                 <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion_1">
                   <div class="accordion-body">
-                    Depending on the service, a full vechile detail takes on average 2-4 hours.
+                    The detailing process can take somewhere between 2-3 hours to an entire day, depending upon the car’s condition and car detailing services you choose.
                   </div>
                 </div>
               </div> <!-- .accordion-item -->
