--- a/index.html
+++ b/index.html
@@ -649,12 +649,12 @@
               </div> <!-- .accordion-item -->
               <div class="accordion-item">
                 <h2 class="mb-0">
-                  <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">How to link your paypal and bank account?</button>
+                  <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">What is a car ceramic coating?</button>
                 </h2>
 
                 <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion_1">
                   <div class="accordion-body">
-                    When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then she continued her way.
+                    A ceramic coating is a chemical polymer solution that’s applied to the car’s exterior. The ceramic coating bonds with your car’s paint and creates an added layer of protection. It is composed of silicon dioxide – sourced from quartz and sand.
                   </div>
                 </div>
 
