--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               <li><a href="portfolio.html">Portfolio</a></li>
               <li><a href="about.html">About</a></li>
               <li><a href="contact.html">Contact us</a></li>
-              <li class="cta-button"><a href="https://untree.co/" target="_blank">Free Templates</a></li>
+              <li class="cta-button"><a href="https://u" target="_blank">Find us on Yelp!</a></li>
             </ul>
 
             <a href="#" class="burger ml-auto site-menu-toggle js-menu-toggle d-block d-lg-none" data-toggle="collapse" data-target="#main-navbar">
