--- a/contact.html
+++ b/contact.html
@@ -140,7 +140,7 @@
                       </svg>
                     </div> <!-- /.icon -->
                     <div class="service-contents">
-                      <p>info@yourdomain.com</p>
+                      <p>admin@jddetailingservices.com</p>
                     </div> <!-- /.service-contents-->
                   </div> <!-- /.service -->
                 </div>
@@ -153,7 +153,7 @@
                       </svg>
                     </div> <!-- /.icon -->
                     <div class="service-contents">
-                      <p>(323)972-5836</p>
+                      <p> (323) 972 - 5836 </p>
                     </div> <!-- /.service-contents-->
                   </div> <!-- /.service -->
                 </div>
