--- a/contact.html
+++ b/contact.html
@@ -127,7 +127,7 @@
                       </svg>
                     </div> <!-- /.icon -->
                     <div class="service-contents">
-                      <p>43 Raymouth Rd. Baltemoer, London 3910</p>
+                      <p>La County , Orange County </p>
                     </div> <!-- /.service-contents-->
                   </div> <!-- /.service -->
                 </div>
