--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
 
           <div class="col-6 col-sm-6 col-lg-9 site-navigation text-right">
             <ul class="js-clone-nav d-none d-lg-inline-block text-left site-menu">
-              <li><a href="index.html">Home</a></li>
+              <li><a href="index.html">About Us</a></li>
               <li class="has-children">
                 <a href="#">Dropdown</a>
                 <ul class="dropdown">
@@ -71,8 +71,8 @@
                 </ul>
               </li>
               
-              <li><a href="portfolio.html">Portfolio</a></li>
-              <li><a href="about.html">About</a></li>
+              <li><a href="portfolio.html">Detailing</a></li>
+              <li><a href="about.html">Ceramic Coating</a></li>
               <li class="active"><a href="contact.html">Contact us</a></li>
               <li class="cta-button"><a href="https://untree.co/" target="_blank">Free Templates</a></li>
             </ul>
