--- a/contact.html
+++ b/contact.html
@@ -71,8 +71,8 @@
                 </ul>
               </li>
               
-              <li><a href="Detailing.html">Detailing</a></li>
-              <li><a href="Ceramic Coating.html">Ceramic Coating</a></li>
+              <li><a href="portfolio.html">Detailing</a></li>
+              <li><a href="about.html">Ceramic Coating</a></li>
               <li class="active"><a href="contact.html">Contact us</a></li>
             </ul>
 
