--- a/about.html
+++ b/about.html
@@ -71,8 +71,8 @@
                 </ul>
               </li>
               
-              <li><a href="Detailing.html">Detailing</a></li>
-              <li class="active"><a href="Ceramic Coating.html">Ceramic Coating</a></li>
+              <li><a href="portfolio.html">Detailing</a></li>
+              <li class="active"><a href="about.html">Ceramic Coating</a></li>
               <li><a href="contact.html">Contact us</a></li>
               <li class="cta-button"><a href="https://untree.co/" target="_blank">Free Templates</a></li>
             </ul>
