--- a/index.html
+++ b/index.html
@@ -202,16 +202,16 @@
               <p class="mb-5">Just give us a call today so we can get started as soon as possible! We look forward to working with you.</p>
               <div class="row mb-5 count-numbers">
                 <div class="col-4 counter" data-aos="fade-up" data-aos-delay="100">
-                  <span class="number" data-number="40+"></span>
-                  <span class="d-block">5 Star Reviews</span>
+                  <span class="number" data-number="7"></span>
+                  <span class="d-block">Years Experience</span>
                 </div>
                 <div class="col-4 counter" data-aos="fade-up" data-aos-delay="200">
-                  <span class="number" data-number="2831"></span>
-                  <span class="d-block">Codes</span>
+                  <span class="number" data-number="55"></span>
+                  <span class="d-block">5 Star Reviews</span>
                 </div>
                 <div class="col-4 counter" data-aos="fade-up" data-aos-delay="300">
-                  <span class="number" data-number="1914"></span>
-                  <span class="d-block">Projects</span>
+                  <span class="number" data-number="2360"></span>
+                  <span class="d-block">Cars Work On</span>
                 </div>
               </div>
             </div>
