--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 </div>
                 <div class="col-4 counter" data-aos="fade-up" data-aos-delay="300">
                   <span class="number" data-number="2360"></span>
-                  <span class="d-block">Cars Work On</span>
+                  <span class="d-block">Cars Worked On</span>
                 </div>
               </div>
             </div>
