--- a/portfolio.html
+++ b/portfolio.html
@@ -96,11 +96,10 @@
       <div class="container">
         <div class="row align-items-center justify-content-between">
           <div class="col-lg-12">
-            <h1 class="text-black">Portfolio</h1>
+            <h1 class="text-black">Detailing Packages</h1>
             <nav aria-label="breadcrumb">
               <ol class="custom-breadcrumb breadcrumb">
-                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Portfolio</li>
+                <li class="breadcrumb-item"><a href="index.html">Price Varies On Size Of Vehicle</a></li>
               </ol>
             </nav>
           </div>
