--- a/portfolio.html
+++ b/portfolio.html
@@ -71,10 +71,9 @@
                 </ul>
               </li>
               
-              <li class="active"><a href="portfolio.html">Portfolio</a></li>
-              <li><a href="about.html">About</a></li>
+              <li class="active"><a href="portfolio.html">Detailing</a></li>
+              <li><a href="about.html">Ceramic Coating</a></li>
               <li><a href="contact.html">Contact us</a></li>
-              <li class="cta-button"><a href="https://untree.co/" target="_blank">Free Templates</a></li>
             </ul>
 
             <a href="#" class="burger ml-auto site-menu-toggle js-menu-toggle d-block d-lg-none" data-toggle="collapse" data-target="#main-navbar">
